<resources>

    <string name="app_name">Champlain College Trivia</string>
    <string name="menu_prompt">What kind of trivia do you want to play?</string>
    <string name="general_category">General Trivia</string>
    <string name="building_category">Building Trivia</string>
    <string name="burlington_category">Burlington Trivia</string>
    <string name="submit">Submit</string>
    <string name="hint">Give me a hint!</string>
    <string name="high_scores">High Scores</string>
    <string name="bad_score">That Was Terrible!</string>
    <string name="okay_score">Not Too Shabby...</string>
    <string name="good_score">Well Done!</string>
    <string name="perfect_score">Perfection!</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="play_again">Play Again</string>

</resources>