<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:contentDescription="@string/general_category"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:visibility="visible"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/menu_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/menu_prompt"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/general_category"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/general_category"
                android:scaleType="centerInside"
                android:src="@drawable/general"
                tools:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/buildings_category"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/building_category"
                android:scaleType="centerInside"
                android:src="@drawable/buildings" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/burlington_category"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/burlington_category"
                android:scaleType="centerInside"
                android:src="@drawable/burlington" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/high_scores"
        app:icon="@drawable/trophy"
        app:iconSize="20dp" />

</LinearLayout>